dictionary/vietnamese/hanoi_mfa/v2.0.0/README.md

# Vietnamese (Hanoi) MFA dictionary v2.0.0

[Link to documentation on mfa-models](https://mfa-models.readthedocs.io/en/main/dictionary/vietnamese_hanoi_mfa.html)

Jump to section:

- [Dictionary details](#dictionary-details)
- [Intended use](#intended-use)
- [Performance Factors](#performance-factors)
- [Ethical considerations](#ethical-considerations)

## Dictionary details

- **Maintainer:** [Montreal Forced Aligner](https://montreal-forced-aligner.readthedocs.io/)
- **Language:** [Vietnamese](https://en.wikipedia.org/wiki/Vietnamese_language)
- **Dialect:** N/A
- **Phone set:** [MFA](https://mfa-models.readthedocs.io/en/refactor/mfa_phone_set.html#vietnamese)
- **Number of words:** `4,810`
- **Phones:** {ipa_inline}`aː˦˥`, {ipa_inline}`aː˨ˀ˥`, {ipa_inline}`aː˨˦`, {ipa_inline}`aː˨˨`, {ipa_inline}`aː˨˩`, {ipa_inline}`aː˨˩ˀ`, {ipa_inline}`aː˨˩˨`, {ipa_inline}`a˦˥`, {ipa_inline}`a˨ˀ˥`, {ipa_inline}`a˨˦`, {ipa_inline}`a˨˨`, {ipa_inline}`a˨˩`, {ipa_inline}`a˨˩ˀ`, {ipa_inline}`a˨˩˨`, {ipa_inline}`c`, {ipa_inline}`eː˦˥`, {ipa_inline}`eː˨ˀ˥`, {ipa_inline}`eː˨˦`, {ipa_inline}`eː˨˨`, {ipa_inline}`eː˨˩`, {ipa_inline}`eː˨˩ˀ`, {ipa_inline}`eː˨˩˨`, {ipa_inline}`e˦˥`, {ipa_inline}`e˨ˀ˥`, {ipa_inline}`e˨˨`, {ipa_inline}`e˨˩`, {ipa_inline}`e˨˩ˀ`, {ipa_inline}`e˨˩˨`, {ipa_inline}`f`, {ipa_inline}`h`, {ipa_inline}`iə˦˥`, {ipa_inline}`iə˨ˀ˥`, {ipa_inline}`iə˨˦`, {ipa_inline}`iə˨˨`, {ipa_inline}`iə˨˩`, {ipa_inline}`iə˨˩ˀ`, {ipa_inline}`iə˨˩˨`, {ipa_inline}`iː˦˥`, {ipa_inline}`iː˨ˀ˥`, {ipa_inline}`iː˨˦`, {ipa_inline}`iː˨˨`, {ipa_inline}`iː˨˩`, {ipa_inline}`iː˨˩ˀ`, {ipa_inline}`iː˨˩˨`, {ipa_inline}`i˦˥`, {ipa_inline}`i˨ˀ˥`, {ipa_inline}`i˨˦`, {ipa_inline}`i˨˨`, {ipa_inline}`i˨˩`, {ipa_inline}`i˨˩ˀ`, {ipa_inline}`i˨˩˨`, {ipa_inline}`j`, {ipa_inline}`k`, {ipa_inline}`kp`, {ipa_inline}`l`, {ipa_inline}`m`, {ipa_inline}`n`, {ipa_inline}`oː˦˥`, {ipa_inline}`oː˨ˀ˥`, {ipa_inline}`oː˨˦`, {ipa_inline}`oː˨˨`, {ipa_inline}`oː˨˩`, {ipa_inline}`oː˨˩ˀ`, {ipa_inline}`oː˨˩˨`, {ipa_inline}`o˦˥`, {ipa_inline}`o˨ˀ˥`, {ipa_inline}`o˨˦`, {ipa_inline}`o˨˨`, {ipa_inline}`o˨˩`, {ipa_inline}`o˨˩ˀ`, {ipa_inline}`o˨˩˨`, {ipa_inline}`p`, {ipa_inline}`s`, {ipa_inline}`t`, {ipa_inline}`tɕ`, {ipa_inline}`tʰ`, {ipa_inline}`uə˦˥`, {ipa_inline}`uə˨ˀ˥`, {ipa_inline}`uə˨˦`, {ipa_inline}`uə˨˨`, {ipa_inline}`uə˨˩`, {ipa_inline}`uə˨˩ˀ`, {ipa_inline}`uə˨˩˨`, {ipa_inline}`uː˦˥`, {ipa_inline}`uː˨ˀ˥`, {ipa_inline}`uː˨˦`, {ipa_inline}`uː˨˨`, {ipa_inline}`uː˨˩`, {ipa_inline}`uː˨˩ˀ`, {ipa_inline}`uː˨˩˨`, {ipa_inline}`u˦˥`, {ipa_inline}`u˨ˀ˥`, {ipa_inline}`u˨˦`, {ipa_inline}`u˨˨`, {ipa_inline}`u˨˩`, {ipa_inline}`u˨˩ˀ`, {ipa_inline}`u˨˩˨`, {ipa_inline}`v`, {ipa_inline}`w`, {ipa_inline}`x`, {ipa_inline}`z`, {ipa_inline}`ŋ`, {ipa_inline}`ŋm`, {ipa_inline}`ɓ`, {ipa_inline}`ɔː˦˥`, {ipa_inline}`ɔː˨ˀ˥`, {ipa_inline}`ɔː˨˦`, {ipa_inline}`ɔː˨˨`, {ipa_inline}`ɔː˨˩`, {ipa_inline}`ɔː˨˩ˀ`, {ipa_inline}`ɔː˨˩˨`, {ipa_inline}`ɔ˦˥`, {ipa_inline}`ɔ˨ˀ˥`, {ipa_inline}`ɔ˨˦`, {ipa_inline}`ɔ˨˨`, {ipa_inline}`ɔ˨˩`, {ipa_inline}`ɔ˨˩ˀ`, {ipa_inline}`ɔ˨˩˨`, {ipa_inline}`ɗ`, {ipa_inline}`əː˦˥`, {ipa_inline}`əː˨ˀ˥`, {ipa_inline}`əː˨˦`, {ipa_inline}`əː˨˨`, {ipa_inline}`əː˨˩`, {ipa_inline}`əː˨˩ˀ`, {ipa_inline}`əː˨˩˨`, {ipa_inline}`ə˦˥`, {ipa_inline}`ə˨ˀ˥`, {ipa_inline}`ə˨˦`, {ipa_inline}`ə˨˨`, {ipa_inline}`ə˨˩`, {ipa_inline}`ə˨˩ˀ`, {ipa_inline}`ə˨˩˨`, {ipa_inline}`ɛː˦˥`, {ipa_inline}`ɛː˨ˀ˥`, {ipa_inline}`ɛː˨˦`, {ipa_inline}`ɛː˨˨`, {ipa_inline}`ɛː˨˩`, {ipa_inline}`ɛː˨˩ˀ`, {ipa_inline}`ɛː˨˩˨`, {ipa_inline}`ɣ`, {ipa_inline}`ɨə˦˥`, {ipa_inline}`ɨə˨ˀ˥`, {ipa_inline}`ɨə˨˦`, {ipa_inline}`ɨə˨˨`, {ipa_inline}`ɨə˨˩`, {ipa_inline}`ɨə˨˩ˀ`, {ipa_inline}`ɨə˨˩˨`, {ipa_inline}`ɨː˨ˀ˥`, {ipa_inline}`ɨː˨˦`, {ipa_inline}`ɨː˨˨`, {ipa_inline}`ɨː˨˩ˀ`, {ipa_inline}`ɨː˨˩˨`, {ipa_inline}`ɨ˦˥`, {ipa_inline}`ɨ˨ˀ˥`, {ipa_inline}`ɨ˨˦`, {ipa_inline}`ɨ˨˨`, {ipa_inline}`ɨ˨˩`, {ipa_inline}`ɨ˨˩ˀ`, {ipa_inline}`ɨ˨˩˨`, {ipa_inline}`ɲ`, {ipa_inline}`ʔ`
- **License:** [CC BY 4.0](https://github.com/MontrealCorpusTools/mfa-models/tree/main/dictionary/vietnamese/hanoi_mfa/v2.0.0/LICENSE)
- **Compatible MFA version:** `v2.0.0`
- **Citation:**

```bibtex
@techreport{
	mfa_vietnamese_hanoi_mfa_dictionary_2022,
	author={McAuliffe, Michael and Sonderegger, Morgan},
	title={Vietnamese (Hanoi) MFA dictionary v2.0.0},
	address={\url{https://mfa-models.readthedocs.io/pronunciation dictionary/Vietnamese/Vietnamese (Hanoi) MFA dictionary v2_0_0.html}},
	year={2022},
	month={Mar},
}
```

- If you have comments or questions about this dictionary or its phone set, you can check [previous MFA model discussion posts](https://github.com/MontrealCorpusTools/mfa-models/discussions?discussions_q=Vietnamese+Hanoi+MFA+dictionary+v2.0.0) or create [a new one](https://github.com/MontrealCorpusTools/mfa-models/discussions/new).

## Installation

Install from the [MFA command line](https://montreal-forced-aligner.readthedocs.io/en/latest/user_guide/models/index.html):

```
mfa models download dictionary vietnamese_hanoi_mfa
```

Or download from [the release page](https://github.com/MontrealCorpusTools/mfa-models/releases/tag/dictionary-vietnamese_hanoi_mfa-v2.0.0).

## Intended use

This dictionary is intended for forced alignment of [Vietnamese](https://en.wikipedia.org/wiki/Vietnamese_language) transcripts.

This dictionary uses the [MFA](https://mfa-models.readthedocs.io/en/refactor/mfa_phone_set.html#vietnamese) phone set for Vietnamese, and was used in training the Vietnamese [MFA](https://mfa-models.readthedocs.io/en/refactor/mfa_phone_set.html#vietnamese) acoustic model.
Pronunciations can be added on top of the dictionary, as long as no additional phones are introduced.

## Performance Factors

When trying to get better alignment accuracy, adding pronunciations is generally helpful, espcially for different styles and dialects.
The most impactful improvements will generally be felt when adding reduced variants that
involve deleting segments/syllables common in spontaneous speech.  Alignment must include all phones specified in the pronunciation of a word, and each phone has
a minimum duration (by default 10ms). If a speaker pronounces a multisyllabic word with just a single syllable, it can be hard for MFA to fit all the segments in,
so it will lead to alignment errors on adjacent words as well.

## Ethical considerations

Deploying any Speech-to-Text model into any production setting has ethical implications. You should consider these implications before use.

### Demographic Bias

You should assume every machine learning model has demographic bias unless proven otherwise.
For pronunciation dictionaries, it is often the case that transcription accuracy and lexicon coverage for the prestige variety modeled in this dictionary compared to other variants.
If you are using this dictionary in production, you should acknowledge this as a potential issue.
